--- a/css/main.css
+++ b/css/main.css
@@ -1952,7 +1952,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #a3963b;
+  background: #8fffff;
 }
 .links-of-blogroll {
   font-size: 13px;
